# Inventory-Management-System

./: README.md
back_end/: CMakeLists.txt  drink.cpp  drinkFactory.cpp  employee.cpp  food.cpp  foodFactory.cpp  fruit.cpp  fruitFactory.cpp  inventory.cpp  inventory.h  main.cpp  manager.cpp  notify.cpp  project.db  report.cpp  stock.cpp  user.cpp  user.h
back_end/include/: Observer.h  drink.h  drinkFactory.h  employee.h  food.h  foodFactory.h  fruit.h  fruitFactory.h  inventory.h  isStock.h  manager.h  notify.h  product.h  productFactory.h  report.h  stock.h  user.h
code/: mainwindow.cpp  mainwindow.ui
front_end/: package-lock.json  package.json
front_end/src/: App.js  index.css
front_end/src/Components/Dashboard/: Dashboard.css  Dashboard.jsx
front_end/src/Components/Dashboard/Inventory/: Inventory.css  Inventory.jsx
front_end/src/Components/Dashboard/Purchase/: Number.css  Number.jsx  Purchase.css  Purchase.jsx
front_end/src/Components/Dashboard/Report/: report.css  report.jsx
front_end/src/Components/Dashboard/Sales/: Sales.css  Sales.jsx
front_end/src/Components/LoginForm/: LoginForm.css  LoginForm.jsx
